apps/nas/seaweedfs/httproute-master.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-master
  namespace: default
spec:
  parentRefs:
  - name: internal-gw
    namespace: infrastructure
  hostnames:
  - "master.seaweedfs.${domain_wahoo_li:=wahoo.li}"
  - "master.seaweedfs.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: seaweedfs-master
      port: 9333
