apps/nas/seaweedfs/httproute-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seaweedfs-s3
  namespace: default
spec:
  parentRefs:
  - name: envoy-gw-private
    namespace: envoy-gateway-system
  hostnames:
  - "s3.${domain_wahoo_li:=wahoo.li}"
  - "s3.${domain_absolutist_it:=absolutist.it}"
  rules:
  - backendRefs:
    - name: seaweedfs-s3
      port: 8333
